k8s/app/password_generator/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password-generator-deployment
  labels:
    app: password-generator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: password-generator
  template:
    metadata:
      labels:
        app: password-generator
    spec:
      containers:
      - name: password-generator
        image: praveenkumar081097/password-generator:latest
        ports:
        - containerPort: 80
