k8s/app/password_generator/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: password-generator-service
spec:
  selector:
    app: password-generator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
