k8s/app/password_generator/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: password-generator-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: pg.cluster.lab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: password-generator-service
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: password-generator-service
            port:
              number: 80
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: password-generator-service
            port:
              number: 80
